# linear-algebra

./: .pdm-python  README.md  pyproject.toml
src/rberga06/linalg/: __init__.py  abstract.py  matrix.py  utils.py  vector.py
tests/: test_mat.py  test_vec.py
