[project]
name = "rberga06-linear-algebra"
version = "0.1.0"
description = "Linear Algebra"
authors = [
    {name = "RBerga06", email = "78449715+RBerga06@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
